--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,10 @@ spring.datasource.password=1234
 spring.datasource.url=jdbc:postgresql://localhost:5433/camel_db
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
 
 #spring.quartz.job-store-type=jdbc
 ##spring.quartz.properties.org.quartz.scheduler.instanceName=YourScheduler
